Lox/grammar.txt
//DEFINED GRAMMAR


program -> declaration* EOF;


declaration -> varDecl
             | statement ;

varDecl -> "var" IDENTIFIER ( "=" expression )? ";" ;

statement -> exprStmt
           | printStmt;
           | block ;

block -> "{" declaration* "}" ;
exprStmt -> expression ";" ;
printStmt -> "print" expression ";" ;

expression  -> assignment;
assignment  -> IDENTIFIER "=" assignment | equality;
equality    -> comparison ( ( "!=" | "==" ) comparison )* ;
comparison  -> term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term        -> factor ( ( "-" | "+" ) factor )* ;
factor      -> unary ( ( "/" | "*" ) unary )* ;
unary       -> ( "!" | "-" | "--" | "++" ) unary
            | postfix ;
postfix     -> primary ( "--" | ++" )* ;
primary     -> NUMBER | STRING | "true" | "false" | "nil"
            | "(" expression ")"
            | IDENTIFIER ;
            --- Error productions... ---
            | ( "!=" | "==" ) equality
            | ( ">" | ">=" | "<" | "<=" ) comparison
            | ( "+" ) term
            | ( "/" | "*" ) factor ;

